[EFL] Leak in ewk_frame_certificate_status_get() https://bugs.webkit.org/show_bug.cgi?id=124401

Reviewed by Carlos Garcia Campos.

The SoupMessage object is being leaked. In in this case that
object is not even necessary since ResourceRequest already
provides a way to get the soup flags directly.

* ewk/ewk_frame.cpp:
(ewk_frame_certificate_status_get):

Canonical link: https://commits.webkit.org/142601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159334 268f45cc-cd09-0410-ab3c-d52691b4dbfc